Refactoring and adding tests for coverage and mutation #2